--- a/ESM2_for_Plastic_Degrading_Proteins.ipynb
+++ b/ESM2_for_Plastic_Degrading_Proteins.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100",
-      "authorship_tag": "ABX9TyOAOg5qNNYsAfR2zDmb2zg9",
-      "include_colab_link": true
+      "gpuType": "A100"
     },
     "kernelspec": {
       "name": "python3",
@@ -2417,16 +2415,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/RJahedan/CS598GBLGroup11/blob/main/ESM2_for_Plastic_Degrading_Proteins.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
